# textual-table-search

./: .gitignore  README.md  pyproject.toml  yoyo.ini
data/: data.db
migrations/: 001_users.sql  20230402_01_oHfx5.sql  run_migrations.py.old
src/my_app/: main.py
