[tool.poetry]
name = "my-app"
version = "0.1.0"
description = ""
authors = ["Mihai Ionut Vilcu <ionutvmi@gmail.com>"]
readme = "README.md"
packages = [{include = "my_app", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
yoyo-migrations = "^8.2.0"
textual = {extras = ["dev"], version = "^0.17.3"}

[tool.poe.tasks]
start = "python src/my_app/main.py"
migrations-list = 'yoyo list'
migrations-apply = 'yoyo apply'

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.2"
poethepoet = "^0.19.0"

[tool.pyright]
stubPath = "./typings"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
